# find-kev-code-samples

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: full-run-orchestrator.md
src/kev_collector/: __init__.py  anonymize.py  batches.py  cli.py  findings.py  git_source.py  io.py  kev.py  known_famous.py  prompts.py  rank.py  sample_pipeline.py  samples.py  validate.py
tests/: test_anonymize.py  test_batches.py  test_findings.py  test_kev.py  test_prompts.py  test_rank.py  test_sample_pipeline.py  test_samples_validate.py
tests/fixtures/: batch.jsonl  findings.jsonl  kev.json
