[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kev-code-sample-collector"
version = "0.1.0"
description = "Simple CISA KEV vulnerable code sample collection workflow"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
kev-collector = "kev_collector.cli:main"
